[project]
name = "defi-data-toolkit"
version = "0.1.0"
description = ""
authors = [
    {name = "Kadats",email = "marcelo.kadats@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "defi_data_toolkit", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
