[project]
name = "defi-data-toolkit"
version = "0.1.0"
description = ""
authors = [
    {name = "Kadats",email = "marcelo.kadats@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.3.3,<3.0.0",
  "requests>=2.32.5,<3.0.0",
  "numpy>=1.26.4,<2.0.0"
]

[tool.poetry]
packages = [{include = "defi_data_toolkit", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
